crates/tests/fixtures/harness/data/error/abi_not_supported/input.rdl

#[win32]
mod Test {
    extern "D" fn Handler();
}
        